# gitfinder

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  build.sh  config.sample.yml  main.cpp  readme.md
src/: collector.py  main.cpp
src/collector/: collector.h
src/config/: config.cpp  config.h
src/crawler/: crawler.h
toolchains/: linux-x86_64.cmake  windows-x86_64.cmake
